--- a/default/data/ui/alerts/misp_alert_create_event.html
+++ b/default/data/ui/alerts/misp_alert_create_event.html
@@ -85,10 +85,10 @@
 
         <div class="controls">
             <select id="misp_alert_create_event_tlp" name="action.misp_alert_create_event.param.tlp">
-                <option value="0">White</option>
-                <option value="1">Green</option>
-                <option value="2" selected>Amber</option>
-                <option value="3">Red</option>
+                <option value="TLP:WHITE">White</option>
+                <option value="TLP:GREEN">Green</option>
+                <option value="TLP:AMBER" selected>Amber</option>
+                <option value="TLP:RED">Red</option>
             </select>
             <span class="help-block">Change the TLP of the created alert. Defaults to TLP-Amber</span>
         </div>
