--- a/misp42splunk/default/data/ui/alerts/misp_alert_create_event.html
+++ b/misp42splunk/default/data/ui/alerts/misp_alert_create_event.html
@@ -103,7 +103,7 @@
         </div>
     </div>
     <div class="control-group">
-        <h4>Specific MISP instance (overwrite general settings</h4>
+        <h4>Specific MISP instance (overwrite general settings)</h4>
     </div>
     <div class="control-group">
         <label class="control-label" for="misp_alert_create_event_URL">URL</label>
