--- a/misp42splunk/default/data/ui/alerts/thehive_alert_create_alert.html
+++ b/misp42splunk/default/data/ui/alerts/thehive_alert_create_alert.html
@@ -105,7 +105,7 @@
         <label class="control-label" for="thehive_alert_create_alert_URL">URL</label>
 
         <div class="controls">
-            <input type="text" name="action.thehive_alert_create_alert.param.thehiveURL" id="thehive_alert_create_alert_thehiveURL" />
+            <input type="text" name="action.thehive_alert_create_alert.param.thehive_url" id="thehive_alert_create_alert_thehive_url" />
             <span class="help-block">
               The URL to submit alerts to e.g. http://hive.example.com/api/alert.
             </span>
@@ -115,9 +115,9 @@
         <label class="control-label" for="thehive_alert_create_alert_Key">API KEY</label>
 
         <div class="controls">
-            <input type="text" name="action.thehive_alert_create_alert.param.thehiveKey" id="thehive_alert_create_alert_thehiveKey" />
+            <input type="text" name="action.thehive_alert_create_alert.param.thehive_key" id="thehive_alert_create_alert_thehive_key" />
             <span class="help-block">
-              The API KEY for authentication
+              TH API KEY 
             </span>
         </div>
     </div>
