--- a/misp42splunk/default/data/ui/alerts/misp_alert_create_event.html
+++ b/misp42splunk/default/data/ui/alerts/misp_alert_create_event.html
@@ -112,6 +112,19 @@
         </div>
     </div>
     <div class="control-group">
+        <h4>Specific MISP instance name from file lookups/misp_instances.csv</h4>
+    </div>
+    <div class="control-group">
+        <label class="control-label" for="misp_alert_create_event_misp_instance">misp_instance</label>
+
+        <div class="controls">
+            <input type="text" name="action.misp_alert_create_event.param.misp_instance" id="misp_alert_create_event_misp_instance"/>
+            <span class="help-block">
+                misp_instance (leave blank to use default settings).
+            </span>
+        </div>
+    </div>
+    <div class="control-group">
         <h4>Specific MISP instance (overwrite general settings)</h4>
     </div>
     <div class="control-group">
